Styled page in css

--- a/index.html
+++ b/index.html
@@ -29,9 +29,12 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="d-flex">
-      <h1>hello</h1>
-      <p>timo</p>
+    <div class="hero">
+      <h1>ZARELA GUERRERO</h1>
+      <h2 class="mb-5">Front-end Developer & Data Analyst</h2>
+      <a href="#" class="btn btn-branding" id="contact-button"
+        >View Portfolio</a
+      >
     </div>
   </body>
 </html>
