Added css for background image

--- a/index.html
+++ b/index.html
@@ -29,12 +29,40 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="hero">
-      <h1>ZARELA GUERRERO</h1>
-      <h2 class="mb-5">Front-end Developer & Data Analyst</h2>
-      <a href="#" class="btn btn-branding" id="contact-button"
-        >View Portfolio</a
-      >
+    <div class="container">
+      <div class="hero">
+        <h1 id="developer-name">ZARELA GUERRERO</h1>
+        <h2 class="mb-5">Front-end Developer & Data Analyst</h2>
+        <a href="#" class="btn btn-branding" id="contact-button"
+          >View Portfolio</a
+        >
+      </div>
     </div>
+
+    <footer>
+      <div class="d-flex justify-content-center mb-3">
+        <p class="mt-5 d-flex justify-content-center">
+          <a href="mailto:zarela.info@gmail.com">
+            <i class="fa-solid fa-envelope pe-1"></i>
+            zarela.info@gmail.com
+          </a>
+        </p>
+      </div>
+      <div class="social-links d-flex justify-content-center mb-5">
+        <a href="">
+          <i class="fa-brands fa-instagram" style="color: #d1cebd"></i>
+        </a>
+        <a href="">
+          <i class="fa-brands fa-linkedin" style="color: #d1cebd"></i>
+        </a>
+        <a href="">
+          <i class="fa-brands fa-twitter" style="color: #d1cebd"></i>
+        </a>
+      </div>
+      <hr />
+      <p class="d-flex justify-content-center text-muted pb-5 pt-3">
+        This page was coded by Zarela Guerrero, & it's open-sourced.
+      </p>
+    </footer>
   </body>
 </html>
