--- a/index.html
+++ b/index.html
@@ -29,8 +29,40 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="container">
-      <div class="hero">
+    <nav class="navbar navbar-expand-lg navbar-light bg-white">
+      <div class="container">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbar"
+          aria-expanded="false"
+          aria-label="Toggle-navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav text-uppercase">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/work.html">Work</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/contact.html">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <div class="hero">
+      <div class="container">
         <h1 id="developer-name">ZARELA GUERRERO</h1>
         <h2 class="mb-5">Front-end Developer & Data Analyst</h2>
         <a href="#" class="btn btn-branding" id="contact-button"
@@ -40,7 +72,8 @@
     </div>
 
     <footer>
-      <div class="d-flex justify-content-center mb-3">
+      <div class="d-flex justify-content-center mb-5"></div>
+      <div class="d-flex justify-content-center">
         <p class="mt-5 d-flex justify-content-center">
           <a href="mailto:zarela.info@gmail.com">
             <i class="fa-solid fa-envelope pe-1"></i>
@@ -48,21 +81,21 @@
           </a>
         </p>
       </div>
-      <div class="social-links d-flex justify-content-center mb-5">
+      <div class="social-links d-flex justify-content-center">
         <a href="">
-          <i class="fa-brands fa-instagram" style="color: #d1cebd"></i>
+          <i class="fa-brands fa-instagram" style="color: #bab4b5"></i>
         </a>
         <a href="">
-          <i class="fa-brands fa-linkedin" style="color: #d1cebd"></i>
+          <i class="fa-brands fa-linkedin" style="color: #bab4b5"></i>
         </a>
         <a href="">
-          <i class="fa-brands fa-twitter" style="color: #d1cebd"></i>
+          <i class="fa-brands fa-twitter" style="color: #bab4b5"></i>
         </a>
       </div>
       <hr />
-      <p class="d-flex justify-content-center text-muted pb-5 pt-3">
+      <section class="d-flex justify-content-center text-muted pb-5 pt-3">
         This page was coded by Zarela Guerrero, & it's open-sourced.
-      </p>
+      </section>
     </footer>
   </body>
 </html>
